# ticketEvent

./: .gitignore  README.md  docker-compose.yml  model.rs
backend/: Cargo.toml  README.md
backend/.cargo/: config.toml
backend/src/: db.rs  lib.rs  main.rs
backend/src/domain/: event.rs  login.rs  mod.rs  oauth.rs  registration.rs  template.rs  user.rs
backend/src/handlers/: auth_handler.rs  event_handler.rs  mod.rs  user_handler.rs
backend/src/repositories/: event_repository.rs  mod.rs  template_repository.rs  user_repository.rs
backend/src/routes/: auth_routes.rs  event_routes.rs  mod.rs  user_routes.rs
backend/tests/: e2e_tests.rs
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/registration/: page.tsx
frontend/app/(template)/: layout.tsx  page.tsx
frontend/app/(template)/event/: page.tsx
frontend/components/ui/: Button.tsx  Table.tsx
frontend/frontend/types/: CreateEvent.ts  User.ts
frontend/hooks/: useAuth.ts  useEvents.ts
frontend/lib/: apiClient.ts
frontend/lib/api/: auth.ts
frontend/types/: AuthResponse.ts  CreateUser.ts  Event.ts  LoginRequest.ts  User.ts
