[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
image = "0.24"
qrcode = "0.14"
printpdf = "0.9"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
ts-rs = { version = "10.0", features = ["uuid"] }
bcrypt = "0.15"
jsonwebtoken = "9"
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
chrono = { version = "0.4", features = ["serde"] }
